Fixing a small layout issue in the Single Show Prices callout block (custom)

--- a/docroot/themes/custom/big_noise/css/main.css
+++ b/docroot/themes/custom/big_noise/css/main.css
@@ -3071,28 +3071,34 @@ a.big-button:hover {
   font-size: 0;
   text-align: center;
 }
-/* line 81, ../scss/custom/_single-show-prices-callout.scss */
+@media (min-width: 1024px) {
+  /* line 73, ../scss/custom/_single-show-prices-callout.scss */
+  .single-show-prices-callout.ticket-benefit-list {
+    text-align: left;
+  }
+}
+/* line 84, ../scss/custom/_single-show-prices-callout.scss */
 .single-show-prices-callout.ticket-benefit-list > li {
   display: inline-block;
   font-size: 1.4rem;
 }
-/* line 87, ../scss/custom/_single-show-prices-callout.scss */
+/* line 90, ../scss/custom/_single-show-prices-callout.scss */
 .single-show-prices-callout.ticket-benefit-list > li:not(:last-of-type) {
   padding-right: 0.5em;
 }
-/* line 90, ../scss/custom/_single-show-prices-callout.scss */
+/* line 93, ../scss/custom/_single-show-prices-callout.scss */
 .single-show-prices-callout.ticket-benefit-list > li:not(:last-of-type)::after {
   content: '\2022';
   padding-left: 0.5em;
 }
 @media (min-width: 768px) {
-  /* line 97, ../scss/custom/_single-show-prices-callout.scss */
+  /* line 100, ../scss/custom/_single-show-prices-callout.scss */
   .single-show-prices-callout.ticket-benefit-list > li {
     font-size: 1.6rem;
   }
 }
 @media (min-width: 1024px) {
-  /* line 103, ../scss/custom/_single-show-prices-callout.scss */
+  /* line 106, ../scss/custom/_single-show-prices-callout.scss */
   .single-show-prices-callout.ticket-benefit-list > li {
     font-size: 1.6rem;
   }
