--- a/docroot/themes/custom/big_noise/scss/custom/_single-show-prices-callout.scss
+++ b/docroot/themes/custom/big_noise/scss/custom/_single-show-prices-callout.scss
@@ -77,6 +77,9 @@
 
     font-size: 0;
     text-align: center;
+    @media (min-width: $bn-breakpoint-width-min-layout-desktop) {
+      text-align: left;
+    }
 
     > li {
       display: inline-block;
